gst-libs/gst/gl/gstglmemorypbo.c
@@ -56,7 +56,11 @@
 #define USING_GLES2(context) (gst_gl_context_check_gl_version (context, GST_GL_API_GLES2, 2, 0))
 #define USING_GLES3(context) (gst_gl_context_check_gl_version (context, GST_GL_API_GLES2, 3, 0))
 
+/* FIXME: Unused, see https://bugzilla.gnome.org/show_bug.cgi?id=759679 */
+#if 0
 #define GL_MEM_WIDTH(gl_mem) _get_plane_width (&gl_mem->mem.info, gl_mem->mem.plane)
+#endif
+
 #define GL_MEM_HEIGHT(gl_mem) _get_plane_height (&gl_mem->mem.info, gl_mem->mem.plane)
 #define GL_MEM_STRIDE(gl_mem) GST_VIDEO_INFO_PLANE_STRIDE (&gl_mem->mem.info, gl_mem->mem.plane)
 
@@ -119,6 +123,8 @@ typedef struct
   gboolean result;
 } GstGLMemoryPBOCopyParams;
 
+/* FIXME: Unused, see https://bugzilla.gnome.org/show_bug.cgi?id=759679 */
+#if 0
 static inline guint
 _get_plane_width (GstVideoInfo * info, guint plane)
 {
@@ -130,6 +136,7 @@ _get_plane_width (GstVideoInfo * info, guint plane)
   else                          /* RGB, GRAY */
     return GST_VIDEO_INFO_WIDTH (info);
 }
+#endif
 
 static inline guint
 _get_plane_height (GstVideoInfo * info, guint plane)
